# iot-fleet-devops-playground

./: .gitignore  Makefile  README.md  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
app/: .dockerignore  .env-example  Dockerfile  pyproject.toml
app/fleet_api/: config.py  logging.py  main.py
app/fleet_api/models/: device.py
app/fleet_api/routers/: devices.py
app/fleet_api/services/: dynamodb.py  s3.py
app/tests/: conftest.py  test_devices.py
helm/fleet-api/: Chart.yaml  values-local.yaml  values.yaml
helm/fleet-api/dashboards/: fleet-api.json
helm/fleet-api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: smoke.sh
terraform/: dynamodb.tf  iam.tf  kms.tf  locals.tf  outputs.tf  providers.tf  s3.tf  variables.tf
